<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.StopwatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/timer_text"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00 : 00 : 00"
                android:textColor="#fff"
                android:textSize="45sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fraction_text"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/timer_text"
                android:layout_toRightOf="@id/timer_text"
                android:text=".00"
                android:textColor="#fff"
                android:textSize="30sp"
                android:layout_alignBottom="@id/timer_text"
                />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_below="@id/timer_text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/start"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/reset"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset"
                android:textAllCaps="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_text"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="HH"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:textColor="#fff"
                />

            <EditText

                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="MM"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:textColor="#fff"
                />

            <EditText
                android:id="@+id/seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="SS"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:textColor="#fff"
                />


        </LinearLayout>


        <Button
            android:id="@+id/alert"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/alert"
            android:textAllCaps="false"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/alert_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/sound_text"
            android:textColor="#232323"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>


</RelativeLayout>
